# arm_kinematics_trajectory

./: LICENSE  README.md
Logger/: CMakeLists.txt  package.xml
Logger/include/Logger/: Logger.h
Logger/src/: Logger.cpp  main.cpp
dsl_intp/: CMakeLists.txt  package.xml
dsl_intp/include/dsl_intp/: intp.hpp
dsl_intp/src/: intp.cpp
dsl_intp/test/: testIntp.cpp
intp/: CMakeLists.txt  package.xml
intp/include/intp/: intp.hpp  intp_exportdecl.h
intp/src/: intp.cpp
intp/test/: testIntp.cpp
kdl_common/: CMakeLists.txt  package.xml
kdl_common/include/kdl_common/: common_constants.hpp  pose.hpp  rotation.hpp  twistWrench.hpp  vec.hpp  version.h
kdl_common/src/: pose.cpp  rotation.cpp  twistWrench.cpp  vec.cpp
kinematics_map/: CMakeLists.txt  kinematics_plugin.xml  package.xml
kinematics_map/include/kinematics_map/: base_kinematics.hpp  quattro.hpp  quattroK.hpp  quattro_4.hpp  scara.hpp
kinematics_map/src/: quattro.cpp  quattroK.cpp  quattro_4.cpp  scara.cpp
quattro/: CMakeLists.txt  package.xml
quattro/config/: quattro_control.yaml
quattro/launch/: bot.launch  quattro_4_rviz.launch  quattro_control.launch  quattro_rviz.launch  quattro_world.launch  test_quattro.launch  test_quattro_rviz.launch
quattro/model/: quattro_macro.xacro
quattro/test/: test_quattro4_rviz.cpp  test_quattro_ros.cpp  test_quattro_rviz.cpp
quattro/yaml/: controllers.yaml
quattro_bot/: CMakeLists.txt  package.xml
quattro_bot/launch/: config.rviz  config4.rviz  quattro_4_rviz.launch  quattro_rviz.launch  quattro_world.launch  test_quattro.launch  test_quattro_rviz.launch
quattro_bot/model/: quattro_4_macro.xacro
quattro_bot/test/: test_quattro4_rviz.cpp  test_quattro_rviz.cpp
rob_commands/: CMakeLists.txt  package.xml
rob_commands/src/intp/: module_motion_command.cpp
rob_motion_commands/: CMakeLists.txt  package.xml  setup.py
rob_motion_commands/src/intp/: module_motion_command.cpp
robnux_kdl_common/: CMakeLists.txt  package.xml
robnux_kdl_common/include/robnux_kdl_common/: common_constants.hpp  common_exportdecl.h  pose.hpp  rotation.hpp  twistWrench.hpp  vec.hpp
robnux_kdl_common/src/: pose.cpp  rotation.cpp  twistWrench.cpp  vec.cpp
robnux_kinematics_map/: CMakeLists.txt  kinematics_plugin.xml  package.xml
robnux_kinematics_map/include/robnux_kinematics_map/: base_kinematics.hpp  kinematics_exportdecl.h  quattro.hpp  quattroK.hpp  quattro_4.hpp  scara.hpp
robnux_kinematics_map/src/: quattro.cpp  quattroK.cpp  quattro_4.cpp  scara.cpp
robnux_trajectory/: CMakeLists.txt  package.xml
robnux_trajectory/include/robnux_trajectory/: PTPTrajectory.hpp  arc_trajectory.hpp  base_profile.hpp  base_rot_trajectory.hpp  base_trans_trajectory.hpp  line_trajectory.hpp  motionlinemapper.h  move_command.hpp  s_curve.hpp  shortest_quat_trajectory.hpp  trajectory.hpp  trajectory_buffer.hpp  trajectory_segment.hpp
robnux_trajectory/src/: PTPTrajectory.cpp  arc_trajectory.cpp  base_profile.cpp  line_trajectory.cpp  motionlinemapper.cpp  move_command.cpp  s_curve.cpp  shortest_quat_trajectory.cpp  trajectory.cpp  trajectory_buffer.cpp  trajectory_segment.cpp
scurve_lib/: CMakeLists.txt  package.xml
scurve_lib/include/scurve_lib/: computeRootsUtil.hpp  piecewise_function.hpp  scurve_exportdecl.h  segment_planning.hpp
scurve_lib/src/: computeRootsUtil.cpp  piecewise_function.cpp  segment_planning.cpp
scurve_lib/test/: testCubicRoots.cpp  testTrajSegment.cpp  testTrajSegmentMidPoints.cpp
simple_motion_logger/: CMakeLists.txt  package.xml
simple_motion_logger/include/simple_motion_logger/: Logger.h  logger_exportdecl.h
simple_motion_logger/src/: Logger.cpp  main.cpp
test_robot_language_script/: testQuattro.py
trajectory/: CMakeLists.txt  package.xml
trajectory/include/trajectory/: PTPTrajectory.hpp  arc_trajectory.hpp  base_profile.hpp  base_rot_trajectory.hpp  base_trans_trajectory.hpp  line_trajectory.hpp  move_command.hpp  s_curve.hpp  shortest_quat_trajectory.hpp  trajectory.hpp  trajectory_buffer.hpp  trajectory_exportdecl.h  trajectory_segment.hpp
trajectory/src/: PTPTrajectory.cpp  arc_trajectory.cpp  base_profile.cpp  line_trajectory.cpp  motionlinemapper.cpp  move_command.cpp  s_curve.cpp  shortest_quat_trajectory.cpp  trajectory.cpp  trajectory_buffer.cpp  trajectory_segment.cpp
