<?xml version="1.0"?>
<package>
    <name>Logger</name>
    <version>0.0.1</version>
    <description>A package for doing simple logging</description>

    <maintainer email="leon@robnux.net">Leon Liu, ROBNUX LLC</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    
    <run_depend>roscpp</run_depend>
    <export>
    </export>
</package>
    
