<?xml version="1.0"?>
<package>
    <name>intp</name>
    <version>0.0.1</version>
    <description>The robot interpreter API package</description>

    <maintainer email="leon@robnux.net">Leon Liu, ROBNUX LLC</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>Logger</build_depend>
    <build_depend>kdl_common</build_depend>
    <build_depend>kinematics_map</build_depend>
    <build_depend>trajectory</build_depend>
     
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>Logger</run_depend>
    <run_depend>kdl_common</run_depend>
    <run_depend>kinematics_map</run_depend>
    <run_depend>trajectory</run_depend>
    <export>
    </export>
</package>
    
