<?xml version="1.0"?>
<package>
    <name>quattro</name>
    <version>0.0.1</version>
    <description>The quattro simulation package</description>

    <maintainer email="leon@robnux.net">Leon Liu</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>Logger</build_depend>
    <build_depend>kdl_common</build_depend>
    <build_depend>kinematics_map</build_depend>
    <build_depend>trajectory</build_depend>
    
    <run_depend>sensor_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msg</run_depend>
    <run_depend>Logger</run_depend>
    <run_depend>kinematics_map</run_depend>
    <run_depend>kdl_common</run_depend>
    <run_depend>trajectory</run_depend>
    <export>
    </export>
</package>
    
