<?xml version="1.0"?>
<package>
    <name>quattro_bot</name>
    <version>1.0.0</version>
    <description>The quattro robot simulation package</description>

    <maintainer email="leon@robnux.net">Leon Liu</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>simple_motion_logger</build_depend>
    <build_depend>robnux_kdl_common</build_depend>
    <build_depend>robnux_kinematics_map</build_depend>
    <build_depend>robnux_trajectory</build_depend>
    
    <run_depend>sensor_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msg</run_depend>
    <run_depend>simple_motion_logger</run_depend>
    <run_depend>robnux_kinematics_map</run_depend>
    <run_depend>robnux_kdl_common</run_depend>
    <run_depend>robnux_trajectory</run_depend>
    <export>
    </export>
</package>
    
