<?xml version="1.0"?>
<package>
    <name>robnux_kinematics_map</name>
    <version>1.0.0</version>
    <description> Kinamtic map (FK/IK) of robot arm</description>

    <maintainer email="leon@robnux.net">Leon Liu, ROBNUX LLC</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>simple_motion_logger</build_depend>
    <build_depend>robnux_kdl_common</build_depend>
    <build_depend>pluginlib</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>simple_motion_logger</run_depend>
    <run_depend>robnux_kdl_common</run_depend>
    <run_depend>pluginlib</run_depend>
    <export>
       <kinematics_map plugin="${prefix}/kinematics_plugin.xml" />
    </export>
</package>
