<?xml version="1.0"?>
<package>
    <name>trajectory</name>
    <version>0.0.1</version>
    <description> trajectory planning and interpolation (pos, vel, acc, jerk) of robot arm</description>

    <maintainer email="leon@robnux.net">Leon Liu, ROBNUX LLC</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>Logger</build_depend>
    <build_depend>kdl_common</build_depend>
    <build_depend>kinematics_map</build_depend>
    <build_depend>scurve_lib</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>Logger</run_depend>
    <run_depend>kdl_common</run_depend>
    <run_depend>kinematics_map</run_depend>
    <run_depend>scurve_lib</run_depend>
    <export>
    </export>
</package>